Fixed CSS in logo and set to start collapsed.

--- a/swagger/index.html
+++ b/swagger/index.html
@@ -32,7 +32,7 @@ font-size: 1.5em;
 font-weight: bold;
 text-decoration: none;
 background: transparent url(images/magento_32.png) no-repeat left center;
-padding: 20px 0 20px 40px;
+padding: 20px 0 20px 80px;
 color: white;
 }
 
@@ -54,6 +54,7 @@ h4.opblock-tag>a>span {color: #ef672f;}
       url: "schemas/latest-2.2.schema.json",
       dom_id: '#swagger-ui-container',
       deepLinking: true,
+      docExpansion: 'none',
       presets: [
         SwaggerUIBundle.presets.apis,
         SwaggerUIStandalonePreset
