Hide the 'Try it' button.

--- a/swagger/index.html
+++ b/swagger/index.html
@@ -43,6 +43,7 @@ div.heading > h3 > span.http_method > a {background-color: #0f6ab4}
 h4.opblock-tag>a>span {color: #ef672f;}
 a > span {font-size: 1.1rem;
           font-weight: bold;}
+div.try-out{display: none;}
 </style>
 
 <script src="./swagger-ui-bundle.js"> </script>
