Added title and version.

--- a/swagger/index.html
+++ b/swagger/index.html
@@ -44,6 +44,11 @@ h4.opblock-tag>a>span {color: #ef672f;}
 a > span {font-size: 1.1rem;
           font-weight: bold;}
 div.try-out{display: none;}
+h1 {text-align: center;
+    font-weight: bold;
+  font-size: 24px;
+padding-top: 20px;
+font-family: "Droid Sans";}
 </style>
 
 <script src="./swagger-ui-bundle.js"> </script>
@@ -78,6 +83,7 @@ div.try-out{display: none;}
     <a id="logo" href="https://devdocs.magento.com/guides/v2.2/rest/bk-rest.html">REST APIs</a>
   </div>
 </div>
+<h1>Magento Commerce for B2B v2.2</h1>
 <div id="swagger-ui-container" class="swagger-ui-wrap"></div>
 </body>
 </html>
